Fix controls being hidden behind background

--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -35,6 +35,7 @@
 
 .controlColumn {
   width: 50%;
+  position: relative;
 }
 
 .backgroundDecorator {
